[package]
name = "deep-sort"
version = "0.1.16"
authors = ["Andrey Tkachenko <andreytkachenko64@gmail.com>"]
edition = "2018"

[dependencies]
grant-object-detector = {path = "../grant-object-detector"}
ndarray-linalg = {version = "0.12.0", features = ["openblas"]}
munkres = "0.5.1"
openblas-src = {version = "0.9.0", features = ["static"]}
onnx-model = {path = "../onnx-model"}
opencv = "=0.41.0"
err-derive = "0.2.4"

[dependencies.ndarray]
version = "0.13.1"
features = ["blas"]
default-features = false

[dev-dependencies]
anyhow = "1.0.31"
